Add data services

--- a/Mockup Project/Mockup Project/Mockup Project.csproj
+++ b/Mockup Project/Mockup Project/Mockup Project.csproj
@@ -1700,6 +1700,12 @@
     <None Include="Project_Readme.html" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Mockup Project.DataServices\Mockup Project.DataServices.csproj">
+      <Project>{e4973869-17c4-4d7d-a6c0-e5e0cca86128}</Project>
+      <Name>Mockup Project.DataServices</Name>
+    </ProjectReference>
+  </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
