--- a/Mockup Project/Mockup Project/Web.config
+++ b/Mockup Project/Mockup Project/Web.config
@@ -11,6 +11,7 @@
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=&quot;|DataDirectory|\aspnet-Mockup Project-20160923014332.mdf&quot;;Initial Catalog=&quot;aspnet-Mockup Project-20160923014332&quot;;Integrated Security=True"
       providerName="System.Data.SqlClient" />
+    <add name="DemoDBEntities" connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=ANDNDSE61368\SQLEXPRESS;initial catalog=DemoDB;persist security info=True;user id=sa;password=123456;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
